--- a/grunt/cssSource/styles.css
+++ b/grunt/cssSource/styles.css
@@ -3421,12 +3421,6 @@ a.read-more-link {
   line-height: 1.2;
 }
 
-.post-snippet-title {
-  font-size: 1.3rem;
-  line-height: 1.4;
-  margin: 0;
-}
-
 .homepage-link {
   height: 44px;
   width: 166px;
@@ -3512,7 +3506,16 @@ a.read-more-link {
 
 .categorySpacing {
   padding: 15px;
-  margin-bottom: 26PX;
+}
+
+.post-snippet-title {
+  font-size: 1.3rem;
+  line-height: 1.4;
+  margin: 0;
+}
+
+.post-snippet-text {
+  margin: 0;
 }
 
 .wf-active h1.post-title, .wf-active h1.category-title {
